# paris-flask

./: Dockerfile  README.md  conftest.py  main.py  pyproject.toml  utility.py
auth/: login.py
models/: user.py
repo/: user.py
router/: auth.py  user.py
templates/: base.html
tests/: test_utility.py
views/: user.py
