[project]
name = "flask-paris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "flask>=3.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "taskipy>=1.14.1",
]
[tool.taskipy.tasks]
fr = "flask --app main run --port 8000 --reload --debug"
test = "pytest -s -v"
